# journey-to-django-code

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
config/: settings.py  urls.py
wishes/: apps.py  models.py  tests.py  urls.py  views.py
wishes/migrations/: 0001_initial.py
wishes/templates/wishes/: home.html
